--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,34 +56,40 @@
 }
 
 :root {
+    --raisin-black: hsla(228, 6%, 15%, 1);
+    --jet: hsla(220, 6%, 20%, 1);
+    --royal-blue-web-color: hsla(224, 50%, 55%, 1);
+    --antiflash-white: hsla(228, 11%, 91%, 1);
+    --seasalt: hsla(220, 27%, 98%, 1);
+
     --radius: 0.625rem;
 
-    --background: oklch(1 0 0);
-    --foreground: oklch(0.129 0.042 264.695);
+    --background: var(--seasalt);
+    --foreground: var(--raisin-black);
 
-    --card: oklch(1 0 0);
-    --card-foreground: oklch(0.129 0.042 264.695);
+    --card: var(--background);
+    --card-foreground: var(--foreground);
 
-    --popover: oklch(1 0 0);
-    --popover-foreground: oklch(0.129 0.042 264.695);
+    --popover: var(--background);
+    --popover-foreground: var(--foreground);
 
-    --primary: oklch(0.208 0.042 265.755);
-    --primary-foreground: oklch(0.984 0.003 247.858);
+    --primary: var(--royal-blue-web-color);
+    --primary-foreground: var(--seasalt);
 
-    --secondary: oklch(0.968 0.007 247.896);
-    --secondary-foreground: oklch(0.208 0.042 265.755);
+    --secondary: var(--antiflash-white);
+    --secondary-foreground: var(--raisin-black);
 
-    --muted: oklch(0.968 0.007 247.896);
-    --muted-foreground: oklch(0.554 0.046 257.417);
+    --muted: var(--antiflash-white);
+    --muted-foreground: var(--jet);
 
-    --accent: oklch(0.968 0.007 247.896);
-    --accent-foreground: oklch(0.208 0.042 265.755);
+    --accent: var(--antiflash-white);
+    --accent-foreground: var(--royal-blue-web-color);
 
     --destructive: oklch(0.577 0.245 27.325);
 
-    --border: oklch(0.929 0.013 255.508);
-    --input: oklch(0.929 0.013 255.508);
-    --ring: oklch(0.704 0.04 256.788);
+    --border: var(--antiflash-white);
+    --input: var(--antiflash-white);
+    --ring: var(--raisin-black);
 
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
@@ -102,32 +108,32 @@
 }
 
 .dark {
-    --background: oklch(0.129 0.042 264.695);
-    --foreground: oklch(0.984 0.003 247.858);
+    --background: var(--raisin-black);
+    --foreground: var(--seasalt);
 
-    --card: oklch(0.208 0.042 265.755);
-    --card-foreground: oklch(0.984 0.003 247.858);
+    --card: var(--background);
+    --card-foreground: var(--foreground);
 
-    --popover: oklch(0.208 0.042 265.755);
-    --popover-foreground: oklch(0.984 0.003 247.858);
+    --popover: var(--background);
+    --popover-foreground: var(--foreground);
 
-    --primary: oklch(0.929 0.013 255.508);
-    --primary-foreground: oklch(0.208 0.042 265.755);
+    --primary: var(--royal-blue-web-color);
+    --primary-foreground: var(--seasalt);
 
-    --secondary: oklch(0.279 0.041 260.031);
-    --secondary-foreground: oklch(0.984 0.003 247.858);
+    --secondary: var(--jet);
+    --secondary-foreground: var(--seasalt);
 
-    --muted: oklch(0.279 0.041 260.031);
-    --muted-foreground: oklch(0.704 0.04 256.788);
+    --muted: var(--jet);
+    --muted-foreground: var(--antiflash-white);
 
-    --accent: oklch(0.279 0.041 260.031);
-    --accent-foreground: oklch(0.984 0.003 247.858);
+    --accent: var(--jet);
+    --accent-foreground: var(--royal-blue-web-color);
 
     --destructive: oklch(0.704 0.191 22.216);
 
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.551 0.027 264.364);
+    --border: var(--jet);
+    --input: var(--jet);
+    --ring: var(--seasalt);
 
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
