--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -15,7 +15,7 @@
 }
 
 @utility h3 {
-    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-2xl font-medium tracking-tight;
 }
 
 .h3 {
@@ -23,7 +23,7 @@
 }
 
 @utility h4 {
-    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-xl tracking-tight;
 }
 
 .h4 {
