--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -50,6 +50,8 @@
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
     --radius-xl: calc(var(--radius) + 4px);
+
+    --container-8xl: 88rem;
 }
 
 :root {
