added ButtonLink snippet, added link component, improved footer, added about section

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,6 +7,10 @@
         @apply bg-background text-foreground;
     }
 
+    div {
+        @apply scroll-smooth;
+    }
+
     h1 {
         @apply h1;
     }
