style: remove theme radius, cut portfolio category link corners

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -223,7 +223,8 @@
     --onyx-2: #3a3c40ff;
     --outer-space: #414449ff;
 
-    --radius: 0.625rem;
+    /* --radius: 0.625rem; */
+    --radius: 0;
 
     @apply theme-light;
 }
