--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import "shadcn/tailwind.css";
+
 @import "./theme.css";
-@import "./base.css";
 @import "./utilities.css";
+@import "./base.css";
