style: change theme accent foreground color to primary

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -104,7 +104,7 @@
     --muted-foreground: var(--color5);
 
     --accent: var(--secondary);
-    --accent-foreground: var(--foreground);
+    --accent-foreground: var(--primary);
 
     --border: oklch(0 0 0 / 10%);
     --input: var(--border);
@@ -156,7 +156,7 @@
     --muted-foreground: var(--color5);
 
     --accent: var(--secondary);
-    --accent-foreground: var(--foreground);
+    --accent-foreground: var(--primary);
 
     --border: oklch(1 0 0 / 10%);
     --input: var(--border);
