chore: fix headings tw merge, create separate typography utils file

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,5 +4,6 @@
 @import "shadcn/tailwind.css";
 
 @import "./theme.css";
+@import "./typography.css";
 @import "./utilities.css";
 @import "./base.css";
