--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -70,6 +70,7 @@
     --radius-4xl: calc(var(--radius) + 16px);
 
     --container-8xl: 88rem;
+    --spacing-screen-no-nav: calc(100vh - 4rem);
 }
 
 @utility theme-light {
